[workspace]
# https://doc.rust-lang.org/cargo/reference/resolver.html#resolver-versions
resolver = "3"
members = [
    "singletact",
    "sparkfun-qwiic-gpio",
]

[workspace.package]
# name = "embedded-device-drivers"
version = "0.1.0"
authors = ["Richard Osterloh <richard.osterloh@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/rosterloh/embedded-device-drivers"
description = "Collection of no_std drivers for embedded devices"
keywords = ["embedded", "hal", "io"]
rust-version = "1.89"

[workspace.dependencies]
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-hal-bus = { version = "0.3.0", features = ["alloc"] }
embedded-hal-mock = { version = "0.11.1", features = ["eh1"], default-features = false }
linux-embedded-hal = { version = "0.4.0", features = ["i2c"], default-features = false }

[profile.dev]
panic = "abort"

[profile.release]
lto = true
panic = "abort"