[package]
name = "singletact"
version = "0.1.0"
description = "A platform-independent driver for the SingleTact force sensor"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["i2c", "force-sensor", "singletact", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]

[features]
default = []
async = ["dep:embedded-hal-async"]

[dependencies]
embedded-hal.workspace = true
embedded-hal-async = { workspace = true, optional = true }
embedded-hal-bus.workspace = true
maybe-async-cfg = "0.2.5"

[dev-dependencies]
embedded-hal-mock.workspace = true
sparkfun-qwiic-gpio = { path = "../sparkfun-qwiic-gpio" }
[target.'cfg(target_os = "linux")'.dev-dependencies]
linux-embedded-hal.workspace = true