[package]
name = "sparkfun-qwiic-gpio"
version = "0.1.0"
description = "A platform-independent driver for the TCA9534 I2C IO expander"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["i2c", "io-expander", "tca9534", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]

[features]
default = []
async = ["dep:embedded-hal-async"]

[dependencies]
embedded-hal.workspace = true
embedded-hal-async = { workspace = true, optional = true }
maybe-async-cfg = "0.2.5"

[dev-dependencies]
embedded-hal-mock = { version = "0.11.1", features = ["eh1"], default-features = false }
i2cdev = "0.6.1"
linux-embedded-hal = "0.4.0"

[profile.dev]
panic = "abort"

[profile.release]
lto = true
panic = "abort"