[package]
name = "sparkfun-qwiic-gpio"
version = "0.1.0"
description = "A platform-independent driver for the TCA9534 I2C IO expander"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["i2c", "io-expander", "tca9534", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]

[features]
default = []
async = ["dep:embedded-hal-async"]

[dependencies]
embedded-hal.workspace = true
embedded-hal-async = { workspace = true, optional = true }
maybe-async-cfg = "0.2.5"

[dev-dependencies]
embedded-hal-mock.workspace = true
[target.'cfg(target_os = "linux")'.dev-dependencies]
linux-embedded-hal.workspace = true